fixed disabled on safari

--- a/src/shared/components/ui/TimeSelect/Select.scss
+++ b/src/shared/components/ui/TimeSelect/Select.scss
@@ -41,6 +41,7 @@
     &--disabled {
         input {
             color: $color-input-border;
+            -webkit-text-fill-color: $color-input-border;
         }
     }
     
